--- a/day-7-finalUI-task/assets/scss/molecules/index.css
+++ b/day-7-finalUI-task/assets/scss/molecules/index.css
@@ -177,11 +177,12 @@
 @media (min-width: 601px) and (max-width: 1024px) {
   .main_sect {
     flex-direction: column;
-    height: 61vh;
+    height: 69vh !important;
     padding: 0 2rem !important;
   }
   .main_sect h2 {
     font-size: 3.5rem !important;
+    margin-top: 18rem !important;
   }
 }
 .system-box {
@@ -258,6 +259,7 @@
     justify-content: center;
     height: 50rem;
     padding: 2rem !important;
+    max-width: 617px !important;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
@@ -267,6 +269,9 @@
     height: 50rem;
     width: 40%;
     padding: 2rem !important;
+  }
+  .pixel-sec__data {
+    width: 100%;
   }
 }
 .local-h3 {
@@ -390,8 +395,9 @@ p {
   }
 }
 .design .pixel-sec-design {
-  height: 30rem !important;
+  height: 62rem !important;
   display: flex;
+  flex-direction: column-reverse;
 }
 .design button,
 .design p {
@@ -413,6 +419,7 @@ p {
   .design .pixel-sec {
     flex-direction: column;
     justify-content: center;
+    display: flex !important;
     height: 50rem;
     padding: 2rem !important;
   }
@@ -427,6 +434,10 @@ p {
     height: 60rem;
   }
   .design .pixel-sec-design__div {
+    width: 100% !important;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5rem !important;
     margin-left: 1rem !important;
   }
   .design .pixel-sec {
@@ -434,6 +445,9 @@ p {
     justify-content: center;
     height: 50rem;
     padding: 2rem !important;
+  }
+  .design .design-sec__data h3 {
+    margin-top: 2rem;
   }
   .design .pixel-sec__data {
     width: 90% !important;
@@ -495,6 +509,17 @@ p {
   .tesla-section .tesla-section__right {
     width: 100%;
     padding: 0 2rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .tesla-article {
+    height: 40.375rem !important;
+  }
+  .tesla-section {
+    flex-direction: column;
+  }
+  .tesla-section__right {
+    padding: 0 14rem !important;
   }
 }
 .marketing h3 {
@@ -580,6 +605,32 @@ p {
     flex-direction: row;
   }
 }
+@media (min-width: 601px) and (max-width: 1024px) {
+  .glow-box {
+    top: 346rem !important;
+    flex-direction: column !important;
+    justify-content: center;
+    align-items: center;
+    gap: 18rem !important;
+  }
+  .market-box {
+    flex-direction: column !important;
+    gap: 10rem !important;
+  }
+  .market-box__box-divs {
+    width: 19rem;
+    border-radius: 8px;
+    position: absolute;
+    background-color: #f5f7fa;
+    height: 13rem;
+    top: 2rem;
+    padding: 0 16px;
+    box-shadow: 28px -1px 49px #b1b1b1, 0 12px 22px #f5f7fa;
+  }
+  .marketing p {
+    padding: 1rem !important;
+  }
+}
 .footer_logo,
 .footer-Company,
 .footer-Support,
@@ -649,5 +700,18 @@ p {
   footer .footer-Company ul,
   footer .footer-Support ul {
     padding-left: 10rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  footer .footer_logo,
+  footer .footer-Company,
+  footer .footer-Support,
+  footer .footer-input {
+    width: 100%;
+    flex-direction: column;
+  }
+  footer .footer-Company ul,
+  footer .footer-Support ul {
+    padding-left: 13.6rem;
   }
 }/*# sourceMappingURL=index.css.map */
