--- a/day-7-finalUI-task/assets/scss/organism/tesla-article/_tesla.scss
+++ b/day-7-finalUI-task/assets/scss/organism/tesla-article/_tesla.scss
@@ -11,3 +11,11 @@ $even_container_bg: #f5f7fa;
     height: 70rem;
   }
 }
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .tesla-article {
+    width: 100%;
+    height: 50.375rem !important;
+    padding: 0 3rem;
+  }
+}
