--- a/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
@@ -29,6 +29,9 @@ $paragraph_color: #717171;
     h2 {
       font-size: 3.5rem !important;
     }
+    img {
+      margin-top: 4rem;
+    }
   }
 }
 
