--- a/day-7-finalUI-task/assets/scss/organism/design/_design.scss
+++ b/day-7-finalUI-task/assets/scss/organism/design/_design.scss
@@ -1,3 +1,5 @@
+$paragraph_color: #717171;
+
 .design {
   margin-top: 2rem !important;
   height: 35rem;
@@ -25,7 +27,7 @@
 @media (max-width: 600px) {
   .design {
     flex-direction: column-reverse !important;
-    height: 80rem;
+    height: 70rem;
 
     .design-sec__data {
       width: 100%;
@@ -40,11 +42,15 @@
     .pixel-sec-design {
       flex-direction: column-reverse;
       justify-content: center;
-      height: 37rem !important;
+      height: 69rem !important;
       width: 90%;
       gap: 5rem;
       margin-top: 2rem !important;
       padding: 2rem !important;
+
+      p {
+        color: $paragraph_color !important;
+      }
     }
   }
 }
