--- a/day-7-finalUI-task/assets/scss/organism/index.css
+++ b/day-7-finalUI-task/assets/scss/organism/index.css
@@ -16,6 +16,11 @@ main {
   background-color: #f5f7fa;
 }
 
+@media (max-width: 600px) {
+  main {
+    height: 110vh;
+  }
+}
 @media (min-width: 601px) and (max-width: 1024px) {
   main {
     height: 116vh;
@@ -113,7 +118,7 @@ main {
 @media (max-width: 600px) {
   .design {
     flex-direction: column-reverse !important;
-    height: 80rem;
+    height: 70rem;
   }
   .design .design-sec__data {
     width: 100%;
@@ -126,11 +131,14 @@ main {
   .design .pixel-sec-design {
     flex-direction: column-reverse;
     justify-content: center;
-    height: 37rem !important;
+    height: 69rem !important;
     width: 90%;
     gap: 5rem;
     margin-top: 2rem !important;
     padding: 2rem !important;
+  }
+  .design .pixel-sec-design p {
+    color: #717171 !important;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
