--- a/day-7-finalUI-task/assets/scss/atoms/elements/_img.scss
+++ b/day-7-finalUI-task/assets/scss/atoms/elements/_img.scss
@@ -16,20 +16,22 @@
   height: 40px;
 }
 
-.pixel-sec__img {
-  width: 23.596rem;
-  height: 23.562rem;
+.design-img {
+  width: 28rem;
+  height: 27rem;
 }
 
 .tesls-client-img {
   width: 60%;
 }
 .tesla-img {
-  width: 21.375rem;
-  height: 21rem;
+  width: 23rem;
+  height: 23rem;
 }
 .market-img {
   width: 23rem;
+  object-fit: cover;
+  object-position: center;
 }
 .footer_logo__img {
   width: 11.938rem !important;
