--- a/day-7-finalUI-task/assets/scss/molecules/header/_top-nav.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/header/_top-nav.scss
@@ -2,12 +2,6 @@ $accent_color: #4caf4f;
 $even_container_bg: #f5f7fa;
 $link_color: #18191f;
 
-.nav-btn-1 {
-  background-color: white !important;
-  color: $accent_color;
-  margin-right: 1rem;
-}
-
 .logo {
   img {
     max-width: 100%;
@@ -40,6 +34,12 @@ $link_color: #18191f;
       a {
         color: $link_color !important;
         text-decoration: none !important;
+        transition: all ease-in 200ms;
+
+        &:hover {
+          transform: scale(1.1);
+          color: #f0f4f0;
+        }
       }
     }
   }
@@ -49,20 +49,19 @@ $link_color: #18191f;
   display: flex;
   gap: 1rem;
 
-  .nav_btn-1 {
-    background-color: white;
+  &__login {
+    background-color: $even_container_bg;
     color: $accent_color;
     border: none;
     padding: 0.4rem 2rem;
     border-radius: 6px;
   }
-
-  .nav_btn-2 {
-    background-color: $accent_color;
+  &__signup {
     color: white;
-    border: none;
-    padding: 0.4rem 2rem;
-    border-radius: 6px;
+
+    &:hover {
+      color: #ffffff;
+    }
   }
 }
 
@@ -101,6 +100,16 @@ $link_color: #18191f;
     ul {
       flex-direction: column;
       gap: 1rem;
+
+      li,
+      a {
+        transition: all ease-in 200ms !important;
+
+        &:hover {
+          transform: scale(1.1) !important;
+          color: #f0f4f0;
+        }
+      }
     }
   }
   .logo {
@@ -142,6 +151,7 @@ $link_color: #18191f;
 
   .menu-icon {
     display: flex;
+    right: -3rem;
   }
 
   .link {
