--- a/day-7-finalUI-task/assets/scss/molecules/index.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/index.scss
@@ -1,5 +1,6 @@
 @import "header/top-nav";
 @import "main/main-container";
+@import "client/client-box";
 @import "system/system-box";
 @import "pixel/pixel-sec";
 @import "local/local-div";
