--- a/day-7-finalUI-task/assets/scss/molecules/local/_local-div.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/local/_local-div.scss
@@ -1,11 +1,5 @@
 $paragraph_color: #717171;
 
-.local-h3 {
-  font-weight: 600 !important;
-  font-size: 3rem !important;
-  margin-top: 3rem;
-}
-
 p {
   color: $paragraph_color !important;
   margin: 0 !important;
@@ -19,12 +13,18 @@ p {
   justify-content: space-between;
   align-content: center;
 
-  .local-div__left {
+  &__left {
     width: 50%;
     height: 100%;
-    margin-right: 1rem;
+    margin-right: 0rem;
+    margin-left: 4rem;
+    &__h3 {
+      font-size: 2.6rem !important;
+      margin-top: 3rem;
+    }
   }
-  .local-div__right {
+
+  &__right {
     width: 50%;
     height: 100%;
     display: flex;
@@ -35,17 +35,16 @@ p {
     .items {
       width: 5rem;
       height: 5rem;
-      margin-left: 9rem;
+      margin-left: 5rem;
       display: flex;
       gap: 2rem;
       p {
-        margin: 0 !important;
-        margin: 0 !important;
+        margin: 0.5rem 0 0 0 !important;
         padding: 0 !important;
         color: gray !important;
       }
 
-      &.hp {
+      &__hp {
         display: flex;
         flex-direction: column;
       }
@@ -60,78 +59,100 @@ p {
     .flex-right,
     .flex-left {
       display: flex;
-      gap: 1rem;
+      gap: 8rem !important;
+      width: 24rem;
     }
   }
 }
 
 @media (max-width: 600px) {
-  .items {
-    margin: 0.4rem !important;
-  }
   .local-div {
     flex-direction: column;
     height: 50rem;
-  }
-
-  .local-div__left {
-    width: 90% !important;
-  }
-
-  .local-div__right {
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    width: 90% !important;
-    margin-right: 1rem !important;
+    align-items: center;
+    // gap: 2rem;
 
-    h3 {
-      font-size: 1rem !important;
+    .items {
+      width: 55%;
+      margin: 0;
+
+      &__h-3 {
+        display: flex;
+      }
     }
 
-    .flex-left,
-    .flex-right {
-      width: 100%;
-      justify-content: center;
-      // align-items: center;
+    &__left {
+      width: 100% !important;
+      // background-color: rebeccapurple;
+      height: 15rem !important;
+      display: flex;
       flex-direction: column;
+      margin: 0 !important;
+
+      h3 {
+        margin-top: -2rem !important;
+      }
+    }
+
+    &__right {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 90% !important;
+      margin-top: -2rem;
+      margin-right: 1rem !important;
+      height: 25rem !important;
+
+      h3 {
+        font-size: 1rem !important;
+      }
+
+      .flex-left,
+      .flex-right {
+        width: 100%;
+        gap: 1.5rem !important;
+        justify-content: center;
+        align-items: center;
+        margin: 0 !important;
+        flex-direction: column;
+      }
     }
   }
 }
 
 @media (min-width: 601px) and (max-width: 1024px) {
-  .items {
-    margin: 0.4rem !important;
-  }
   .local-div {
     flex-direction: column;
-    height: 50rem;
-  }
-
-  .local-div__left {
-    width: 90% !important;
-  }
-
-  .local-div__right {
-    flex-direction: row !important;
+    height: 20rem;
     align-items: center;
-    gap: 7rem !important ;
-    justify-content: center;
-    width: 90% !important;
-    margin-right: 1rem !important;
-    margin-bottom: 7rem;
-    margin-left: 11rem;
 
-    h3 {
-      font-size: 1rem !important;
+    .items {
+      width: 55%;
+      margin: 0;
     }
 
-    .flex-left,
-    .flex-right {
-      width: 100%;
-      justify-content: center;
-      // align-items: center;
-      flex-direction: column;
+    &__left {
+      width: 100% !important;
+
+      h3 {
+        margin-top: -2rem !important;
+      }
+    }
+
+    &__right {
+      margin-top: 3rem;
+
+      h3 {
+        font-size: 1rem !important;
+      }
+
+      .flex-left,
+      .flex-right {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
