--- a/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
+++ b/day-7-finalUI-task/assets/scss/molecules/main/_main-container.scss
@@ -7,17 +7,20 @@ $paragraph_color: #717171;
   align-items: center;
   height: 35rem;
 
+  &__btn {
+    color: white !important;
+    padding: 1rem 2.3rem;
+    margin-top: 1.5rem;
+  }
+
   h2 {
     margin-top: 2rem;
+    font-weight: 500;
+    line-height: 76px;
   }
   p {
     color: $paragraph_color !important;
   }
-}
-.main_sect-btn {
-  color: white !important;
-  padding: 1rem 2.3rem;
-  margin-top: 1.5rem;
 }
 
 @media (max-width: 600px) {
@@ -38,12 +41,13 @@ $paragraph_color: #717171;
 @media (min-width: 601px) and (max-width: 1024px) {
   .main_sect {
     flex-direction: column;
-    height: 69vh !important;
+    height: 96vh !important;
+    justify-content: flex-start;
+    gap: 4rem;
     padding: 0 2rem !important;
 
     h2 {
-      font-size: 3.5rem !important;
-      margin-top: 18rem !important;
+      font-size: 2.8rem !important;
     }
   }
 }
