--- a/day-7-finalUI-task/assets/scss/organism/client/_client.scss
+++ b/day-7-finalUI-task/assets/scss/organism/client/_client.scss
@@ -1,9 +1,9 @@
 $paragraph_color: #717171;
-$even_container_bg: #f5f7fa;
 
 .client {
   height: 12.875rem;
   text-align: center;
+  margin-top: 1.5rem;
 
   p {
     padding: 0rem;
@@ -12,13 +12,7 @@ $even_container_bg: #f5f7fa;
 }
 @media (max-width: 600px) {
   .client {
-    margin-top: 9rem;
+    margin-top: 3.7rem !important;
     height: 20rem;
-    background-color: $even_container_bg;
-
-    .client-logo-img {
-      width: 90%;
-      height: 10rem;
-    }
   }
 }
