--- a/day-7-finalUI-task/assets/scss/organism/footer/_footer.scss
+++ b/day-7-finalUI-task/assets/scss/organism/footer/_footer.scss
@@ -15,7 +15,7 @@ footer {
 
 @media (max-width: 600px) {
   footer {
-    height: 80rem;
+    height: 60rem;
 
     section {
       flex-direction: column;
@@ -24,7 +24,7 @@ footer {
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   footer {
-    height: 80rem;
+    height: 78rem !important;
     section {
       flex-direction: column;
     }
