--- a/day-7-finalUI-task/assets/scss/organism/index.css
+++ b/day-7-finalUI-task/assets/scss/organism/index.css
@@ -10,6 +10,15 @@ header nav {
   justify-content: space-between;
   position: relative;
 }
+header nav .navBtn {
+  display: flex;
+  gap: 1rem;
+}
+header nav .navBtn__login {
+  background-color: #f5f7fa !important;
+  color: #4caf4f !important;
+  margin-right: 7rem;
+}
 
 main {
   height: 90vh;
@@ -23,13 +32,14 @@ main {
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   main {
-    height: 116vh;
+    height: 96vh;
     background-color: #f5f7fa;
   }
 }
 .client {
   height: 12.875rem;
   text-align: center;
+  margin-top: 1.5rem;
 }
 .client p {
   padding: 0rem;
@@ -38,13 +48,8 @@ main {
 
 @media (max-width: 600px) {
   .client {
-    margin-top: 9rem;
+    margin-top: 3.7rem !important;
     height: 20rem;
-    background-color: #f5f7fa;
-  }
-  .client .client-logo-img {
-    width: 90%;
-    height: 10rem;
   }
 }
 .system {
@@ -54,7 +59,16 @@ main {
 
 @media (max-width: 600px) {
   .system {
-    height: 80rem;
+    height: 90rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .system {
+    height: 34rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 .pixelgrade {
@@ -67,8 +81,8 @@ main {
 
 @media (max-width: 600px) {
   .pixelgrade {
-    height: 60rem;
-    margin-top: 2rem !important;
+    height: 55rem;
+    margin-top: -1rem !important;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
@@ -78,81 +92,55 @@ main {
   }
 }
 .localbusiness-div {
-  background-color: #f5f7fa;
   height: 19.875rem;
+  background-color: #f5f7fa;
 }
 
 @media (max-width: 600px) {
   .localbusiness-div {
-    height: 50rem;
+    height: 45rem;
     text-align: center;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   .localbusiness-div {
-    height: 35rem;
+    height: 25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
   }
 }
 .design {
-  margin-top: 2rem !important;
   height: 35rem;
-}
-.design .pixel-sec-design {
-  height: 36rem !important;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  padding: 2rem !important;
-}
-.design .pixel-sec-design .pixel-sec-design__div {
-  width: 30%;
-  margin-left: 9rem;
-}
-.design .design-sec__data {
-  width: 51%;
-  padding-right: 4rem;
 }
 
 @media (max-width: 600px) {
   .design {
     flex-direction: column-reverse !important;
-    height: 70rem;
-  }
-  .design .design-sec__data {
-    width: 100%;
-    padding-right: 0;
-  }
-  .design .pixel-sec-design__div {
-    width: 100% !important;
-    margin-left: 0rem !important;
-  }
-  .design .pixel-sec-design {
-    flex-direction: column-reverse;
-    justify-content: center;
-    height: 69rem !important;
-    width: 90%;
-    gap: 5rem;
-    margin-top: 2rem !important;
-    padding: 2rem !important;
-  }
-  .design .pixel-sec-design p {
-    color: #717171 !important;
+    height: 60rem;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   .design {
-    flex-direction: column !important;
-    height: 70rem;
-    justify-content: space-between;
+    justify-content: center;
+    display: flex;
+    height: 60rem;
   }
-  .design .pixel-sec-design {
-    flex-direction: column;
+  .design .design__sections {
+    flex-direction: column-reverse;
+    justify-content: center !important;
+    align-items: center !important;
   }
-  .design .design-sec__data {
+  .design .design__sections__img-div {
     width: 100% !important;
-    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem !important;
+  }
+  .design .design__sections__data {
+    padding: 0;
+    width: 100%;
   }
 }
 .tesla-article {
@@ -163,18 +151,18 @@ main {
 
 @media (max-width: 600px) {
   .tesla-article {
-    height: 70rem;
+    height: 67rem;
   }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   .tesla-article {
     width: 100%;
-    height: 50.375rem !important;
+    height: 52.375rem !important;
     padding: 0 3rem;
   }
 }
 .marketing {
-  height: 31.625rem;
+  height: 40rem;
 }
 
 @media (max-width: 600px) {
@@ -185,7 +173,7 @@ main {
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   .marketing {
-    height: 100rem;
+    height: 93rem;
   }
 }
 .demo {
@@ -208,6 +196,11 @@ main {
     height: 30rem;
   }
 }
+@media (min-width: 601px) and (max-width: 1024px) {
+  .demo {
+    height: 26rem !important;
+  }
+}
 footer {
   height: 20.5rem;
   background-color: #263238;
@@ -221,7 +214,7 @@ footer section {
 
 @media (max-width: 600px) {
   footer {
-    height: 80rem;
+    height: 60rem;
   }
   footer section {
     flex-direction: column;
@@ -229,7 +222,7 @@ footer section {
 }
 @media (min-width: 601px) and (max-width: 1024px) {
   footer {
-    height: 80rem;
+    height: 78rem !important;
   }
   footer section {
     flex-direction: column;
