--- a/day-7-finalUI-task/assets/scss/organism/system/_system.scss
+++ b/day-7-finalUI-task/assets/scss/organism/system/_system.scss
@@ -5,6 +5,15 @@
 
 @media (max-width: 600px) {
   .system {
-    height: 80rem;
+    height: 90rem;
+  }
+}
+@media (min-width: 601px) and (max-width: 1024px) {
+  .system {
+    height: 34rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
