--- a/day-11-DOM-todoList/assets/css/style.css
+++ b/day-11-DOM-todoList/assets/css/style.css
@@ -31,9 +31,14 @@ section {
         margin: 1rem 0 1.5rem 0;
     }
 
+    .block {
+        width: 100%;
+        height: 5rem;
+    }
+
     .todo-block {
         width: 80%;
-        height: 20rem;
+        /* height: 24rem;    */
 
         .todo-block__list {
             width: 100%;
