--- a/day-16-angular_forms/angular-forms/src/app/components/template-driven-forms-comp/template-driven-forms-comp.component.scss
+++ b/day-16-angular_forms/angular-forms/src/app/components/template-driven-forms-comp/template-driven-forms-comp.component.scss
@@ -10,8 +10,8 @@ article {
     padding: 2rem;
     border-radius: 8px;
     margin-top: 3rem;
-    background: #ebeaea;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: #f8f8f8;
+    box-shadow: 0 4px 8px rgba(8, 8, 8, 0.1);
 
     h2 {
       text-align: center;
