--- a/day-16-angular_forms/angular-forms/src/app/components/reactive-driven-forms-comp/reactive-driven-forms-comp.component.scss
+++ b/day-16-angular_forms/angular-forms/src/app/components/reactive-driven-forms-comp/reactive-driven-forms-comp.component.scss
@@ -1,6 +1,6 @@
 article {
   width: 100%;
-  background-color: #e0e0e0;
+  background-color: #f5f5f5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,7 +8,7 @@ article {
   section {
     width: 90%;
     max-width: 600px; // Set a max width for better responsiveness
-    padding: 2rem;
+    padding: 4rem;
     border-radius: 8px;
     margin-top: 3rem;
     background: #ebeaea;
